configured tasks to output a main pdf for viewers to see

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,12 @@
             "label": "build notes",
             "type": "shell",
             "command": "latexmk -pdf -jobname=build/electromagnetics electromagnetics.tex",
+        },
+        {
+            "label": "copy build",
+            "type": "shell",
+            "command": "cp build/electromagnetics.pdf electromagnetics.pdf",
+            "dependsOn": "build notes",
             "group": {
                 "kind": "build",
                 "isDefault": true
